# email_utils

./: .gitignore  cheat_code.txt  pyproject.toml  requirements.txt
email_utils/: __init__.py  email_utils.py  emails.py  error_tracing.py  payload_template.py
email_utils/templates/: backend_error.html  cancelamento.html  faq.html  lambda_error.html  novo_agendamento.html  novo_cliente.html  primeiro_login.html  recuperacao.html  success.html
