[project]
name = "email-utils"
version = "0.1.0"
description = "Biblioteca para emails"
authors = [
    { name="Pedro Paulo Carvalho Vieira", email="ppaulo030601@gmail.com" }
]
requires-python = ">=3.9"

dependencies = []

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"email_utils" = ["templates/*.html"]